# dual-readout

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  edm4dr.yaml  init.sh  init_hsf.sh  init_k4.sh  init_lcg.sh  init_sipm.sh  setenv-cc7-gcc8.sh
DRdigi/: CMakeLists.txt
DRdigi/include/: DigiSiPM.h
DRdigi/src/: DigiSiPM.cpp
DRdigi/test/: runDigi.py  runDigi_S13615-1025.py
DRreco/: CMakeLists.txt  calib.csv
DRreco/data/: calib.csv  velo.root
DRreco/include/: DRcalib2D.h  DRcalib3D.h  RecoTower.h
DRreco/src/: DRcalib2D.cpp  DRcalib3D.cpp  RecoStandalone.cc  RecoTower.cc
DRreco/test/: runDRcalib.py  runDRcalib3D.py
DRsim/: CMakeLists.txt  DRsim.cc  compacts.txt  gui.mac  init_vis.mac  run_calib.mac  run_ele.mac  run_gps.mac  run_hepmc.mac  run_pi.mac  vis.mac
DRsim/DRsimG4Components/: CMakeLists.txt
DRsim/DRsimG4Components/include/: SimG4SaveDRcaloHits.h  SimG4SaveDRcaloMCTruth.h
DRsim/DRsimG4Components/src/: SimG4SaveDRcaloHits.cpp  SimG4SaveDRcaloMCTruth.cpp
DRsim/DRsimG4Components/test/: runDRsim.py
DRsim/DRsimG4Fast/: CMakeLists.txt
DRsim/DRsimG4Fast/include/: FastSimModelOpFiber.h  SimG4FastSimOpFiberRegion.h
DRsim/DRsimG4Fast/src/: FastSimModelOpFiber.cpp  SimG4FastSimOpFiberRegion.cpp
DRsim/DRsimG4Full/: CMakeLists.txt
DRsim/DRsimG4Full/include/: SimG4DRcaloActionInitialization.h  SimG4DRcaloEventAction.h  SimG4DRcaloSteppingAction.h
DRsim/DRsimG4Full/src/components/: SimG4DRcaloActions.cpp  SimG4DRcaloActions.h  SimG4OpticalPhysicsList.h
DRsim/DRsimG4Full/src/lib/: SimG4DRcaloActionInitialization.cpp  SimG4DRcaloEventAction.cpp  SimG4DRcaloSteppingAction.cpp
DRsim/include/: DRsimActionInitialization.hh  DRsimCellParameterisation.hh  DRsimDetectorConstruction.hh  DRsimEventAction.hh  DRsimFastOpTransportModel.hh  DRsimFilterParameterisation.hh  DRsimMagneticField.hh  DRsimMaterials.hh  DRsimPMTHit.hh  DRsimPMTSD.hh  DRsimPrimaryGeneratorAction.hh  DRsimRunAction.hh  DRsimSiPMHit.hh  DRsimSiPMSD.hh  DRsimStackingAction.hh  DRsimSteppingAction.hh  FastOpTransportModel.hh  HepMCG4AsciiReader.hh  HepMCG4Interface.hh  HepMCG4Reader.hh  dimensionB.hh  dimensionE.hh
DRsim/src/: DRsimActionInitialization.cc  DRsimCellParameterisation.cc  DRsimDetectorConstruction.cc  DRsimEventAction.cc  DRsimFastOpTransportModel.cc  DRsimFilterParameterisation.cc  DRsimMagneticField.cc  DRsimMaterials.cc  DRsimPMTHit.cc  DRsimPMTSD.cc  DRsimPrimaryGeneratorAction.cc  DRsimRunAction.cc  DRsimSiPMHit.cc  DRsimSiPMSD.cc  DRsimStackingAction.cc  DRsimSteppingAction.cc  FastOpTransportModel.cc  HepMCG4AsciiReader.cc  HepMCG4Interface.cc  HepMCG4Reader.cc  dimensionB.cc  dimensionE.cc
Detector/: CMakeLists.txt
Detector/DRcalo/: CMakeLists.txt
Detector/DRcalo/compact/: DRcalo.xml  DRcalo_IDEA.xml  DRcalo_Wratten9_S13615-1025.xml  DRmaterials.xml  DRopticals.xml
Detector/DRcalo/include/: DRconstructor.h  DRparamBarrel.h
Detector/DRcalo/src/: DRconstructor.cpp  DRgeo.cpp  DRparamBarrel.cpp
Detector/DRcomponents/: CMakeLists.txt
Detector/DRcomponents/include/: GeoConstruction.h  GeoSvc.h
Detector/DRsegmentation/: CMakeLists.txt
Detector/DRsegmentation/include/: DRparamBarrel.h  DRparamBase.h  DRparamEndcap.h  GridDRcalo.h  GridDRcaloHandle.h
Detector/DRsegmentation/src/: DRparamBarrel.cpp  DRparamBase.cpp  DRparamEndcap.cpp  GridDRcalo.cpp  GridDRcaloHandle.cpp  SegmentationFactories.cpp
Detector/DRsensitive/: CMakeLists.txt
Detector/DRsensitive/include/: DRcaloSiPMHit.h  DRcaloSiPMSD.h
Detector/DRsensitive/src/: DRcaloSiPMHit.cpp  DRcaloSiPMSD.cpp  SDWrapper.cpp
Detector/DetComponents/: CMakeLists.txt
Detector/DetComponents/include/: GeoSvc.h
Detector/DetComponents/src/: GeoConstruction.cpp  GeoSvc.cpp
Detector/compact/: DRcalo.xml  DRmaterials.xml  DRopticals.xml
Detector/interface/: DRconstructor.h  DRparamBarrel.h
Detector/src/: DRconstructor.cpp  DRgeo.cpp  DRparamBarrel.cpp
Digi/: CMakeLists.txt  Digi.cc
Digi/include/: DigiPodio.h  DigiSiPM.h
Digi/src/: DigiPodio.cc  DigiSiPM.cpp
Digi/test/: runDigi.py
Reco/: CMakeLists.txt  Reco.cc  calib.csv
Reco/include/: DRcalib2D.h  RecoFiber.h  RecoStandalone.h  RecoTower.h
Reco/src/: DRcalib2D.cpp  RecoFiber.cc  RecoStandalone.cc  RecoTower.cc
Reco/test/: runDRcalib.py  runDRcaloReco.py
Sim/: CMakeLists.txt
Sim/DRsimG4Components/: CMakeLists.txt
Sim/DRsimG4Components/include/: SimG4SaveDRcaloHits.h
Sim/DRsimG4Fast/: CMakeLists.txt
Sim/DRsimG4Fast/include/: SimG4FastSimOpFiberRegion.h
Sim/DRsimG4Fast/src/: FastSimModelOpFiber.cpp
Sim/DRsimG4Full/: CMakeLists.txt
Sim/DRsimG4Full/include/: SimG4DRcaloActionInitialization.h  SimG4DRcaloSteppingAction.h
Sim/DRsimG4Full/src/: SimG4DRcaloSteppingAction.cpp  SimG4OpticalPhysicsList.cpp
Sim/DRsimG4Full/src/components/: SimG4DRcaloActions.cpp  SimG4DRcaloActions.h
Sim/DRsimG4Full/src/lib/: SimG4DRcaloActionInitialization.cpp  SimG4DRcaloSteppingAction.cpp
Sim/SimG4Components/: CMakeLists.txt
Sim/SimG4Components/include/: SimG4SaveDRcaloHits.h  SimG4SaveMCParticles.h
Sim/SimG4Components/src/: SimG4SaveDRcaloHits.cpp  SimG4SaveMCParticles.cpp
Sim/SimG4Fast/: CMakeLists.txt
Sim/SimG4Fast/include/: FastSimModelOpFiber.h  SimG4FastSimOpFiberRegion.h
Sim/SimG4Fast/src/: FastSimModelOpFiber.cpp  SimG4FastSimOpFiberRegion.cpp
Sim/SimG4Full/: CMakeLists.txt
Sim/SimG4Full/include/: SimG4DRcaloSteppingAction.h
Sim/SimG4Full/src/: SimG4DRcaloSteppingAction.cpp
analysis/: CMakeLists.txt  JER.cc  analysis.cc  analysis.cpp  calib.cc
analysis/include/: functions.h
analysis/src/: functions.cc  functions.cpp
automation/: README.md  Torque_env.sh  calibtheta.txt  condor.sub  condor_exe.sh  manage_number.sh  run_CEPC.sh  run_calib.mac  run_pi.mac  submit.sh  (+2 more)
edm4dr/: CMakeLists.txt
rootIO/: CMakeLists.txt  edm4dr.yaml
rootIO/edm4dr/: CMakeLists.txt
rootIO/include/: DRsimInterface.h  DRsimRootInterface.h  LinkDef.h  RecoInterface.h  RootInterface.h  fastjetInterface.h
rootIO/src/: DRsimInterface.cc  DRsimRootInterface.cc  RecoInterface.cc  RootInterface.cc  fastjetInterface.cc
(+40 files in other folders)
